# screen-pilot

./: .gitignore  AGENT_INSTRUCTIONS.md  LICENSE  README.md  config.example.toml  install.sh  pyproject.toml  screen-pilot.service
skills/: screen-pilot-usage.md
src/screen_pilot/: __init__.py  backend.py  capture.py  cli.py  config.py  detect.py  diff.py  input.py  loop.py  safety.py  server.py
src/screen_pilot/tui/: __init__.py  config.py  install.py  uninstall.py
tests/: test_backend.py  test_capture.py  test_cli.py  test_config.py  test_detect.py  test_diff.py  test_input.py  test_loop.py  test_safety.py  test_server.py
